--- a/index.html
+++ b/index.html
@@ -1,17 +1,316 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>MindCards - App de Flashcards</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MindCards — Flashcards grátis, simples e sem anúncios</title>
+  <meta name="description" content="MindCards: crie e estude flashcards com imagens e áudio, metas diárias, sincronização iCloud e exportação. 100% grátis e sem anúncios." />
+  <meta name="theme-color" content="#0ea5e9" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="MindCards" />
+  <meta property="og:title" content="MindCards — Flashcards grátis, simples e sem anúncios" />
+  <meta property="og:description" content="Crie e estude flashcards com imagens e áudio, metas diárias e iCloud. 100% grátis e sem anúncios." />
+  <meta property="og:image" content="assets/og-image.png" />
+  <meta property="og:url" content="" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <link rel="icon" href="assets/favicon.png" />
+  <style>
+    :root { --bg: #0b1220; --card: #0f172a; --text: #e5e7eb; --muted: #94a3b8; --brand: #0ea5e9; --brand-2:#22d3ee; }
+    * { box-sizing: border-box; }
+    html, body { margin:0; padding:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; color: var(--text); background: radial-gradient(1200px 600px at 20% -10%, rgba(34,211,238,.15), transparent), radial-gradient(800px 400px at 90% -20%, rgba(14,165,233,.25), transparent), var(--bg); }
+    a { color: inherit; text-decoration: none; }
+    .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+
+    /* Nav */
+    header { position: sticky; top: 0; z-index: 50; backdrop-filter: saturate(180%) blur(8px); background: rgba(11,18,32,.6); border-bottom: 1px solid rgba(148,163,184,.15); }
+    .nav { display:flex; align-items:center; justify-content:space-between; height:64px; }
+    .brand { display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px; }
+    .brand img { width:28px; height:28px; border-radius:8px; }
+    .nav-links { display:flex; gap:18px; align-items:center; }
+    .nav a { color: var(--muted); font-size:14px; }
+    .lang { border:1px solid rgba(148,163,184,.25); padding:6px 10px; border-radius:10px; font-size:12px; cursor:pointer; }
+
+    /* Hero */
+    .hero { padding: 72px 0 40px; text-align:center; }
+    h1 { font-size: clamp(32px, 6vw, 56px); line-height: 1.05; margin: 0; }
+    .subtitle { margin: 16px auto 28px; max-width: 760px; color: var(--muted); font-size: clamp(16px, 2.5vw, 20px); }
+    .cta { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+    .btn { display:inline-flex; align-items:center; gap:10px; padding:12px 18px; border-radius:14px; border: 1px solid rgba(148,163,184,.25); background: linear-gradient(180deg, rgba(14,165,233,.18), rgba(34,211,238,.10)); color: #e6f9ff; font-weight:600; }
+    .btn.secondary { background: transparent; color: var(--text); }
+    .btn:hover { transform: translateY(-1px); transition: .15s ease; }
+
+    /* Showcase */
+    .frame { margin: 40px auto 24px; max-width: 880px; border-radius: 18px; overflow:hidden; border:1px solid rgba(148,163,184,.25); background: linear-gradient(180deg, rgba(148,163,184,.12), rgba(30,41,59,.35)); }
+    .screens { display:grid; grid-template-columns: repeat(3, 1fr); gap:1px; background: rgba(148,163,184,.2); }
+    .screens img { width:100%; display:block; aspect-ratio: 9/19.5; object-fit: cover; background: #0a0f1a; }
+
+    /* Features */
+    .section { padding: 56px 0; }
+    .section h2 { font-size: clamp(24px, 3.5vw, 32px); margin: 0 0 20px; }
+    .grid { display:grid; grid-template-columns: repeat(3, 1fr); gap:16px; }
+    .card { background: linear-gradient(180deg, rgba(15,23,42,.85), rgba(2,6,23,.6)); border: 1px solid rgba(148,163,184,.15); border-radius: 16px; padding:18px; }
+    .card h3 { margin:0 0 8px; font-size:18px; }
+    .card p { margin:0; color: var(--muted); font-size:15px; }
+
+    /* How it works */
+    .steps { display:grid; grid-template-columns: repeat(3, 1fr); gap:16px; counter-reset: step; }
+    .step { border: 1px solid rgba(148,163,184,.15); border-radius:16px; padding:18px; background: rgba(2,6,23,.45); }
+    .step h4 { margin:0 0 8px; font-size:17px; }
+    .badge { display:inline-flex; align-items:center; justify-content:center; width:28px; height:28px; border-radius:8px; margin-bottom:8px; background: linear-gradient(180deg, var(--brand), var(--brand-2)); color:#00121a; font-weight:800; }
+
+    /* FAQ */
+    .faq { max-width: 900px; margin: 0 auto; }
+    details { border: 1px solid rgba(148,163,184,.18); background: rgba(2,6,23,.35); border-radius: 14px; padding: 14px 16px; margin-bottom: 12px; }
+    summary { cursor: pointer; font-weight:600; }
+    details p { color: var(--muted); margin: 8px 0 0; }
+
+    /* Footer */
+    footer { border-top: 1px solid rgba(148,163,184,.15); padding: 28px 0 40px; color: var(--muted); }
+    .foot { display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:space-between; }
+    .small { font-size: 13px; }
+
+    /* Responsive */
+    @media (max-width: 920px) {
+      .grid, .steps, .screens { grid-template-columns: 1fr 1fr; }
+    }
+    @media (max-width: 620px) {
+      .grid, .steps, .screens { grid-template-columns: 1fr; }
+      .nav-links { display:none; }
+    }
+  </style>
 </head>
 <body>
-  <h1>MindCards</h1>
-  <p>MindCards é um app de flashcards gratuito e sem anúncios para ajudar no aprendizado de forma simples e eficiente.</p>
-  
-  <h2>Links úteis</h2>
-  <ul>
-    <li><a href="privacy.html">Política de Privacidade</a></li>
-    <li><a href="support.html">Suporte</a></li>
-  </ul>
+  <header>
+    <div class="container nav">
+      <a class="brand" href="#">
+        <img src="assets/icon.png" alt="Ícone do MindCards" />
+        <span>MindCards</span>
+      </a>
+      <nav class="nav-links">
+        <a href="#features" data-i18n="nav.features">Recursos</a>
+        <a href="#how" data-i18n="nav.how">Como funciona</a>
+        <a href="#faq" data-i18n="nav.faq">FAQ</a>
+        <a href="#contact" data-i18n="nav.contact">Contato</a>
+        <button class="lang" id="langToggle" aria-label="Switch language">EN</button>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero container">
+      <h1 data-i18n="hero.title">Flashcards grátis, simples e sem anúncios</h1>
+      <p class="subtitle" data-i18n="hero.subtitle">
+        Crie seus decks, estude no seu ritmo, adicione imagens e áudio, e sincronize pelo iCloud.
+        Compartilhe com amigos por .minddeck ou CSV.
+      </p>
+      <div class="cta">
+        <a class="btn" id="downloadBtn" href="https://apps.apple.com/app/idXXXXXXXXX" target="_blank" rel="noopener" data-i18n="cta.download">
+          Baixar na App Store
+        </a>
+        <a class="btn secondary" href="#features" data-i18n="cta.learn">Ver recursos</a>
+      </div>
+
+      <div class="frame" aria-label="Capturas de tela do app">
+        <div class="screens">
+          <img src="assets/screen-1.jpg" alt="Tela do MindCards com lista de decks" />
+          <img src="assets/screen-2.jpg" alt="Tela de estudo de flashcards" />
+          <img src="assets/screen-3.jpg" alt="Tela de criação de cards com imagem" />
+        </div>
+      </div>
+    </section>
+
+    <section class="section container" id="features">
+      <h2 data-i18n="features.title">Recursos que importam</h2>
+      <div class="grid">
+        <div class="card">
+          <h3 data-i18n="features.f1.title">Sem paywalls</h3>
+          <p data-i18n="features.f1.desc">100% grátis e sem anúncios. Estude sem distrações.</p>
+        </div>
+        <div class="card">
+          <h3 data-i18n="features.f2.title">Importe & Exporte</h3>
+          <p data-i18n="features.f2.desc">Suporte a CSV UTF‑8 e arquivos .minddeck para compartilhar decks.</p>
+        </div>
+        <div class="card">
+          <h3 data-i18n="features.f3.title">Imagens & Áudio</h3>
+          <p data-i18n="features.f3.desc">Cards com mídia para memorização mais rápida.</p>
+        </div>
+        <div class="card">
+          <h3 data-i18n="features.f4.title">Metas diárias</h3>
+          <p data-i18n="features.f4.desc">Defina seu ritmo, acompanhe streaks e progresso.</p>
+        </div>
+        <div class="card">
+          <h3 data-i18n="features.f5.title">Sincronização iCloud</h3>
+          <p data-i18n="features.f5.desc">Seus decks, seguros e disponíveis em todos os dispositivos.</p>
+        </div>
+        <div class="card">
+          <h3 data-i18n="features.f6.title">Offline</h3>
+          <p data-i18n="features.f6.desc">Estude em qualquer lugar, mesmo sem internet.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section container" id="how">
+      <h2 data-i18n="how.title">Como funciona</h2>
+      <div class="steps">
+        <div class="step">
+          <div class="badge">1</div>
+          <h4 data-i18n="how.s1.title">Crie um deck</h4>
+          <p class="small" data-i18n="how.s1.desc">Comece do zero ou importe um CSV/.minddeck.</p>
+        </div>
+        <div class="step">
+          <div class="badge">2</div>
+          <h4 data-i18n="how.s2.title">Adicione cards</h4>
+          <p class="small" data-i18n="how.s2.desc">Texto, imagem e áudio. Simples e rápido.</p>
+        </div>
+        <div class="step">
+          <div class="badge">3</div>
+          <h4 data-i18n="how.s3.title">Estude diariamente</h4>
+          <p class="small" data-i18n="how.s3.desc">Defina metas e acompanhe sua evolução.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section container faq" id="faq">
+      <h2 data-i18n="faq.title">Perguntas frequentes</h2>
+      <details>
+        <summary data-i18n="faq.q1">O app é realmente gratuito?</summary>
+        <p data-i18n="faq.a1">Sim. Sem anúncios, sem paywalls e sem coleta abusiva de dados.</p>
+      </details>
+      <details>
+        <summary data-i18n="faq.q2">Funciona offline?</summary>
+        <p data-i18n="faq.a2">Sim. Você pode estudar mesmo sem internet.</p>
+      </details>
+      <details>
+        <summary data-i18n="faq.q3">Posso exportar meus decks?</summary>
+        <p data-i18n="faq.a3">Sim, em CSV UTF‑8 e no formato .minddeck.</p>
+      </details>
+    </section>
+  </main>
+
+  <footer id="contact">
+    <div class="container foot">
+      <div class="small">© <span id="year"></span> MindCards. <span data-i18n="foot.rights">Todos os direitos reservados.</span></div>
+      <div class="small">
+        <a href="mailto:contato@example.com" data-i18n="foot.email">contato@example.com</a>
+        ·
+        <a href="#" id="privacyLink" data-i18n="foot.privacy">Política de Privacidade</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Simple privacy modal (inline to keep single-file setup) -->
+  <dialog id="privacyModal" style="max-width:720px; border:none; border-radius:16px; padding:0; background:#0b1220; color:#e5e7eb;">
+    <div style="padding:22px; border:1px solid rgba(148,163,184,.25); border-radius:16px; margin:8px;">
+      <h3 style="margin-top:0" data-i18n="privacy.title">Política de Privacidade</h3>
+      <p class="small" data-i18n="privacy.text">
+        O MindCards não exibe anúncios nem vende seus dados. Dados pessoais mínimos podem
+        ser processados para suporte e analytics anônimos (por exemplo, contagem de instalações).
+        Você pode solicitar a remoção de dados entrando em contato por e‑mail.
+      </p>
+      <div style="display:flex; justify-content:flex-end; gap:8px; margin-top:12px;">
+        <button class="lang" id="closePrivacy" data-i18n="privacy.close">Fechar</button>
+      </div>
+    </div>
+  </dialog>
+
+  <script>
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Privacy modal
+    const privacyModal = document.getElementById('privacyModal');
+    document.getElementById('privacyLink').addEventListener('click', function (e) {
+      e.preventDefault(); privacyModal.showModal();
+    });
+    document.getElementById('closePrivacy').addEventListener('click', function () {
+      privacyModal.close();
+    });
+
+    // Language toggle (PT-BR default)
+    const t = {
+      en: {
+        'nav.features':'Features','nav.how':'How it works','nav.faq':'FAQ','nav.contact':'Contact',
+        'hero.title':'Free, simple, ad‑free flashcards','hero.subtitle':'Create decks, study at your pace, add images and audio, and sync with iCloud. Share via .minddeck or CSV.',
+        'cta.download':'Download on the App Store','cta.learn':'See features',
+        'features.title':'Features that matter',
+        'features.f1.title':'No paywalls','features.f1.desc':'100% free and ad‑free. No distractions.',
+        'features.f2.title':'Import & Export','features.f2.desc':'CSV UTF‑8 and .minddeck supported for easy sharing.',
+        'features.f3.title':'Images & Audio','features.f3.desc':'Media‑rich cards for faster recall.',
+        'features.f4.title':'Daily goals','features.f4.desc':'Set your pace, track streaks and progress.',
+        'features.f5.title':'iCloud sync','features.f5.desc':'Your decks, safe across devices.',
+        'features.f6.title':'Offline','features.f6.desc':'Study anywhere, even without internet.',
+        'how.title':'How it works','how.s1.title':'Create a deck','how.s1.desc':'Start from scratch or import CSV/.minddeck.',
+        'how.s2.title':'Add cards','how.s2.desc':'Text, image, and audio. Quick and simple.',
+        'how.s3.title':'Study daily','how.s3.desc':'Set goals and track your evolution.',
+        'faq.title':'Frequently asked questions','faq.q1':'Is the app really free?','faq.a1':'Yes. No ads, no paywalls, no abusive data collection.',
+        'faq.q2':'Does it work offline?','faq.a2':'Yes. You can study without internet.',
+        'faq.q3':'Can I export my decks?','faq.a3':'Yes, as CSV UTF‑8 and .minddeck.',
+        'foot.rights':'All rights reserved.','foot.privacy':'Privacy Policy','foot.email':'contact@example.com',
+        'privacy.title':'Privacy Policy','privacy.text':'MindCards does not display ads or sell your data. Minimal personal data may be processed for support and anonymous analytics (e.g., install counts). You may request data deletion by email.','privacy.close':'Close'
+      },
+      pt: {
+        'nav.features':'Recursos','nav.how':'Como funciona','nav.faq':'FAQ','nav.contact':'Contato',
+        'hero.title':'Flashcards grátis, simples e sem anúncios','hero.subtitle':'Crie seus decks, estude no seu ritmo, adicione imagens e áudio, e sincronize pelo iCloud. Compartilhe com amigos por .minddeck ou CSV.',
+        'cta.download':'Baixar na App Store','cta.learn':'Ver recursos',
+        'features.title':'Recursos que importam',
+        'features.f1.title':'Sem paywalls','features.f1.desc':'100% grátis e sem anúncios. Estude sem distrações.',
+        'features.f2.title':'Importe & Exporte','features.f2.desc':'Suporte a CSV UTF‑8 e arquivos .minddeck para compartilhar decks.',
+        'features.f3.title':'Imagens & Áudio','features.f3.desc':'Cards com mídia para memorização mais rápida.',
+        'features.f4.title':'Metas diárias','features.f4.desc':'Defina seu ritmo, acompanhe streaks e progresso.',
+        'features.f5.title':'Sincronização iCloud','features.f5.desc':'Seus decks, seguros e disponíveis em todos os dispositivos.',
+        'features.f6.title':'Offline','features.f6.desc':'Estude em qualquer lugar, mesmo sem internet.',
+        'how.title':'Como funciona','how.s1.title':'Crie um deck','how.s1.desc':'Comece do zero ou importe um CSV/.minddeck.',
+        'how.s2.title':'Adicione cards','how.s2.desc':'Texto, imagem e áudio. Simples e rápido.',
+        'how.s3.title':'Estude diariamente','how.s3.desc':'Defina metas e acompanhe sua evolução.',
+        'faq.title':'Perguntas frequentes','faq.q1':'O app é realmente gratuito?','faq.a1':'Sim. Sem anúncios, sem paywalls e sem coleta abusiva de dados.',
+        'faq.q2':'Funciona offline?','faq.a2':'Sim. Você pode estudar mesmo sem internet.',
+        'faq.q3':'Posso exportar meus decks?','faq.a3':'Sim, em CSV UTF‑8 e no formato .minddeck.',
+        'foot.rights':'Todos os direitos reservados.','foot.privacy':'Política de Privacidade','foot.email':'contato@example.com',
+        'privacy.title':'Política de Privacidade','privacy.text':'O MindCards não exibe anúncios nem vende seus dados. Dados pessoais mínimos podem ser processados para suporte e analytics anônimos (por exemplo, contagem de instalações). Você pode solicitar a remoção de dados entrando em contato por e‑mail.',
+        'privacy.close':'Fechar'
+      }
+    };
+
+    function setLang(lang) {
+      document.documentElement.lang = lang === 'en' ? 'en' : 'pt-BR';
+      document.querySelectorAll('[data-i18n]').forEach(function (el) {
+        const key = el.getAttribute('data-i18n');
+        if (t[lang] && t[lang][key]) { el.textContent = t[lang][key]; }
+      });
+      document.getElementById('langToggle').textContent = lang === 'en' ? 'PT' : 'EN';
+      // Example: switch email label too
+      const email = document.querySelector('[data-i18n="foot.email"]');
+      if (email) email.setAttribute('href', 'mailto:' + (lang === 'en' ? 'contact@example.com' : 'contato@example.com'));
+    }
+
+    let current = 'pt';
+    document.getElementById('langToggle').addEventListener('click', function(){
+      current = current === 'pt' ? 'en' : 'pt'; setLang(current);
+    });
+
+    // If user locale looks English, switch once
+    if (navigator.language && navigator.language.startsWith('en')) {
+      current = 'en'; setLang('en');
+    }
+  </script>
+
+  <!-- Structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MobileApplication",
+    "name": "MindCards",
+    "operatingSystem": "iOS",
+    "applicationCategory": "EducationalApplication",
+    "offers": { "@type": "Offer", "price": "0.00", "priceCurrency": "USD" },
+    "url": "",
+    "inLanguage": ["pt-BR", "en"],
+    "description": "Crie e estude flashcards com imagens e áudio, metas diárias e iCloud. 100% grátis.",
+    "sameAs": []
+  }
+  </script>
 </body>
 </html>
