--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         Compartilhe com amigos por .minddeck ou CSV.
       </p>
       <div class="cta">
-        <a class="btn" id="downloadBtn" href="https://apps.apple.com/app/mindcards/id6751152760" target="_blank" rel="noopener" data-i18n="cta.download">
+        <a class="btn" id="downloadBtn" href="https://apps.apple.com/app/id6751152760" target="_blank" rel="noopener" data-i18n="cta.download">
           Baixar na App Store
         </a>
         <a class="btn secondary" href="#features" data-i18n="cta.learn">Ver recursos</a>
