--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="container foot">
       <div class="small">© <span id="year"></span> MindCards. <span data-i18n="foot.rights">Todos os direitos reservados.</span></div>
       <div class="small">
-        <a href="mailto:contato@example.com" data-i18n="foot.email">contato@example.com</a>
+        <a href="mailto:lucasc.monteiro@outlook.com" data-i18n="foot.email">lucasc.monteiro@outlook.com</a>
         ·
         <a href="#" id="privacyLink" data-i18n="foot.privacy">Política de Privacidade</a>
       </div>
