--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         'faq.title':'Perguntas frequentes','faq.q1':'O app é realmente gratuito?','faq.a1':'Sim. Sem anúncios, sem paywalls e sem coleta abusiva de dados.',
         'faq.q2':'Funciona offline?','faq.a2':'Sim. Você pode estudar mesmo sem internet.',
         'faq.q3':'Posso exportar meus decks?','faq.a3':'Sim, em CSV UTF‑8 e no formato .minddeck.',
-        'foot.rights':'Todos os direitos reservados.','foot.privacy':'Política de Privacidade','foot.email':'contato@example.com',
+        'foot.rights':'Todos os direitos reservados.','foot.privacy':'Política de Privacidade','foot.email':'lucasc.monteiro@outlook.com',
         'privacy.title':'Política de Privacidade','privacy.text':'O MindCards não exibe anúncios nem vende seus dados. Dados pessoais mínimos podem ser processados para suporte e analytics anônimos (por exemplo, contagem de instalações). Você pode solicitar a remoção de dados entrando em contato por e‑mail.',
         'privacy.close':'Fechar'
       }
