--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="container foot">
       <div class="small">© <span id="year"></span> MindCards. <span data-i18n="foot.rights">Todos os direitos reservados.</span></div>
       <div class="small">
-        <a href="mailto:lucasc.monteiro@outlook.com" data-i18n="foot.email">lucasc.monteiro@outlook.com</a>
+        <a href="mailto:mindcards@outlook.com" data-i18n="foot.email">mindcards@outlook.com</a>
         ·
         <a href="#" id="privacyLink" data-i18n="foot.privacy">Política de Privacidade</a>
       </div>
@@ -308,7 +308,7 @@
         'faq.title':'Perguntas frequentes','faq.q1':'O app é realmente gratuito?','faq.a1':'Sim. Sem anúncios, sem paywalls e sem coleta abusiva de dados.',
         'faq.q2':'Funciona offline?','faq.a2':'Sim. Você pode estudar mesmo sem internet.',
         'faq.q3':'Posso exportar meus decks?','faq.a3':'Sim, em CSV UTF‑8 e no formato .minddeck.',
-        'foot.rights':'Todos os direitos reservados.','foot.privacy':'Política de Privacidade','foot.email':'lucasc.monteiro@outlook.com',
+        'foot.rights':'Todos os direitos reservados.','foot.privacy':'Política de Privacidade','foot.email':'mindcards@outlook.com',
         'privacy.title':'Política de Privacidade','privacy.text':'O MindCards não exibe anúncios nem vende seus dados. Dados pessoais mínimos podem ser processados para suporte e analytics anônimos (por exemplo, contagem de instalações). Você pode solicitar a remoção de dados entrando em contato por e‑mail.',
         'privacy.close':'Fechar'
       }
