--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   align-items: start;        /* alinha as três pelo topo */
   background: transparent;
   padding: 8px 4px;
+  margin-top: clamp(28px, 6vw, 72px); /* <- espaço entre texto/CTA e as imagens */
 }
 
 .screens img {
