--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         'faq.title':'Frequently asked questions','faq.q1':'Is the app really free?','faq.a1':'Yes. No ads, no paywalls, no abusive data collection.',
         'faq.q2':'Does it work offline?','faq.a2':'Yes. You can study without internet.',
         'faq.q3':'Can I export my decks?','faq.a3':'Yes, as CSV UTF‑8 and .minddeck.',
-        'foot.rights':'All rights reserved.','foot.privacy':'Privacy Policy','foot.email':'contact@example.com',
+        'foot.rights':'All rights reserved.','foot.privacy':'Privacy Policy','foot.email':'mindcards@outlook.com',
         'privacy.title':'Privacy Policy','privacy.text':'MindCards does not display ads or sell your data. Minimal personal data may be processed for support and anonymous analytics (e.g., install counts). You may request data deletion by email.','privacy.close':'Close'
       },
       pt: {
@@ -324,7 +324,7 @@
       document.getElementById('langToggle').textContent = lang === 'en' ? 'PT' : 'EN';
       // Example: switch email label too
       const email = document.querySelector('[data-i18n="foot.email"]');
-      if (email) email.setAttribute('href', 'mailto:' + (lang === 'en' ? 'contact@example.com' : 'contato@example.com'));
+      if (email) email.setAttribute('href', 'mailto:' + (lang === 'en' ? 'mindcards@outlook.com' : 'mindcards@outlook.com'));
     }
 
     let current = 'pt';
